--- a/tracker.html
+++ b/tracker.html
@@ -12,7 +12,7 @@
 
       <div class="tracker-header">
         <h1>Financial Tracker</h1>
-        <div id="totalBalance" class="balance"></div>
+        <div id="totalBalance" class="balance">$0.00</div>
       </div>
 
       <form id="transactionForm" class="transaction-form">
